--- a/config/station.yaml
+++ b/config/station.yaml
@@ -5,6 +5,9 @@ metadata:
     up: "A" # Aに向かう向きが up
     down: "J" # Jに向かう向きが down
 
+sim_start: "05:00"
+sim_end: "24:30"
+
 stations:
   - id: A
     express_stop: true         # 急行停車
@@ -33,7 +36,7 @@ stations:
     turnback: true             # 途中折返し想定
   - id: F
     express_stop: false
-    depot: false
+    depot: True
     crew_rest: false
     turnback: false
   - id: J
@@ -78,6 +81,9 @@ min_times:                   # 下限時間（デフォルト）
 min_times_overrides:
   dwell:
     E: "00:02"
+
+start_time:
+
 
 # 出発間隔（停車発車／折返し発車で別設定）
 headway:
