--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,27 +1,14 @@
 [project]
 name = "crew-scheduling"
 version = "0.1.0"
-description = "Crew scheduling experiments"
+description = "Add your description here"
 readme = "README.md"
-requires-python = ">=3.11"
+requires-python = ">=3.9"
 dependencies = [
-    "numpy>=2.3.2",
-    "plotly>=6.3.0",
+    "einops>=0.8.1",
+    "ipykernel>=6.30.1",
+    "numpy>=2.0.2",
     "pyyaml>=6.0.2",
-    "rl4co>=0.6.0",
-    "streamlit>=1.48.1",
-    "streamlit-plotly-events>=0.0.6",
+    "tensordict>=0.10.0",
+    "torch>=2.8.0",
 ]
-
-[dependency-groups]
-dev = [
-  "ruff",
-  "black",
-  "mypy",
-  "pytest",
-  "pytest-cov",
-  "ipykernel"
-]
-
-[tool.uv]
-default-groups = ["dev"]
