--- a/test_config/station.yaml
+++ b/test_config/station.yaml
@@ -5,35 +5,36 @@ metadata:
     up: "A" # Aに向かう向きが up
     down: "J" # Jに向かう向きが down
 
-# 駅情報
+sim_start: "05:00"
+sim_end: "08:00"
 
 stations:
-  - id: A  # 最大の駅
+  - id: A
     express_stop: true         # 急行停車
     depot: True               # 留置所の有無
     crew_rest: true            # 乗務員休憩可
     turnback: true             # 折返し可（終端）
-  - id: B # 大きめの駅
-    express_stop: True
+  - id: B
+    express_stop: false
     depot: true
     crew_rest: true
-    turnback: true
-  - id: C # 留置所がある小さめの駅
-    express_stop: false
-    depot: True
-    crew_rest: false
-    turnback: false
-  - id: D  # 大きめの駅
+    turnback: False
+  - id: C
     express_stop: True
     depot: false
     crew_rest: True
     turnback: True
-  - id: E # 留置所がある小さめの駅
+  - id: D
+    express_stop: True
+    depot: false
+    crew_rest: True
+    turnback: True
+  - id: E
     express_stop: False
-    depot: True 
+    depot: True
     crew_rest: False
-    turnback: False            
-  - id: F # 終端駅
+    turnback: False
+  - id: F
     express_stop: true
     depot: True
     crew_rest: True
@@ -57,23 +58,17 @@ segments:
     - from: E
       to: F
       time: "00:37"
-  # -rapid:
-  #   - from: A
-  #     to: D
-  #     time: "00:35"
-  #   - from: D
-  #     to: F
-  #     time: "00:10"
-  
-# timetable作成用の基本設定
-
-sim_start: "05:00"
-sim_end: "18:00"
+  -rapid:
+    - from: A
+      to: E
+      time: "00:35"
+    - from: D
+      to: F
+      time: "00:10"
 
 min_times:                   # 下限時間（デフォルト）
   dwell: "00:01"            # 停車（開扉）最短
-  turnback: "00:07"         # 折返し最短（入換含む）
-
+  turnback: "00:10"         # 折返し最短（入換含む）
 # 駅個別の下限時間上書き
 min_times_overrides:
   dwell:
