--- a/test2_config/crew.yaml
+++ b/test2_config/crew.yaml
@@ -14,10 +14,10 @@ time_labels:
 # 駅・時間帯ラベル・人数だけ
 # 終点駅は連続している駅であることを前提に作ってます
 placements:
-  # - station: A
-  #   slot: am
-  #   count: 3
-  #   allowed_signoff: ["A","B"]
+  - station: A
+    slot: am
+    count: 1
+    allowed_signoff: ["A","B"]
 
   - station: B
     slot: am
@@ -27,13 +27,13 @@ placements:
 
   - station: D
     slot: am
-    count: 2
+    count: 1
     allowed_signoff: ["F"]
 
-  - station: A
-    slot: pm
-    count: 1
-    allowed_signoff: ["B"]
+  # - station: A
+  #   slot: pm
+  #   count: 1
+  #   allowed_signoff: ["B"]
 
 add_crew:
   additional_start: "04:30"
