--- a/test_config/train.yaml
+++ b/test_config/train.yaml
@@ -4,7 +4,15 @@ dispatch:
   - station: B
     windows:
       - start: "05:00"
-        end: "09:00"
-        count: 3
+        end: "06:00"
+        count: 2
+        direction: up
+        service: local  
+
+  - station: F
+    windows:
+      - start: "05:30"
+        end: "07:00"
+        count: 2
         direction: up
         service: local  
